# Something_I_do

./: README.md
fine_dust/: dust_api.py  pyproject.toml
last_word_game/: main.py  pyproject.toml
last_word_game/src/: lastword.py
mbti_test/: main.py  pyproject.toml
mbti_test/src/mbti/: mbti.py  question.txt
news_to_kakaotalk/: main.py  pyproject.toml
news_to_kakaotalk/src/kakaopipeline/: kakao_pipeline.py  kakao_token.json  kakao_token.py
translator_papago/: PAPAGO_Translator.spec  main.py  pyproject.toml  result.txt  translation.txt
