[tool.poetry]
name = "news-to-kakaotalk"
version = "0.1.0"
description = ""
authors = ["이현진 <jinintg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
selenium = "^4.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
